# c-cpp-park-vk-education-prep_project

./: CMakeLists.txt  README.md  client.cpp  client_2.cpp  connection.cpp  model.cpp  model.h  server.cpp
include/: bullet.h  connection.h  danya_client.h  danya_server.h  initialMap  map.h  mob.h  model.h  player.h  unmovable.h  wall.h
include/textures/: Вопросы к зачету по дисциплине Правоведение.docx
src/: client.cpp  connection.cpp  dim_client.cpp  dim_server.cpp  main.cpp  map.cpp  model.cpp  new_server.cpp  server.cpp
src/Network/: danya_client.cpp  danya_server.cpp  dim_client.cpp  dim_server.cpp  main_sever.cpp
src/models/: bullet.cpp  map.cpp  mob.cpp  model.cpp  player.cpp  unmovable.cpp  wall.cpp
src/old_network/: client.cpp  connection.cpp  new_server.cpp  server.cpp
