cmake_minimum_required(VERSION 3.20)
project(application)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeFiles)
find_package(SFML REQUIRED COMPONENTS graphics window system network)
include_directories(${SFML_INCLUDE_DIR})
#include_directories(./include)
add_executable(server src/dim_server.cpp src/model.cpp)
add_executable(client src/dim_client.cpp src/model.cpp)
add_executable(client_2 src/dim_client.cpp src/model.cpp)
target_link_libraries(server ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
target_link_libraries(client ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
target_link_libraries(client_2 ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})