cmake_minimum_required(VERSION 3.20)
project(application)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/CMakeFiles)
find_package(SFML REQUIRED COMPONENTS graphics window system network)
include_directories(${SFML_INCLUDE_DIR})
#include_directories(./include)
add_executable(server src/Network/danya_server.cpp src/Network/main_sever.cpp src/models/model.cpp src/models/wall.cpp src/models/player.cpp src/models/mob.cpp src/models/map.cpp)
add_executable(client src/Network/dim_client.cpp src/models/model.cpp src/models/wall.cpp src/models/player.cpp src/models/mob.cpp src/models/map.cpp)
add_executable(client_2 src/Network/dim_client.cpp src/models/model.cpp src/models/wall.cpp src/models/player.cpp src/models/mob.cpp src/models/map.cpp)
target_link_libraries(server ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
target_link_libraries(client ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
target_link_libraries(client_2 ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})